Dev branch created

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -16,7 +16,8 @@ services = VPN
 #
 # At the moment, available values are: 
 #  - rm3-sdn-vpn
-alternatives = rm3-sdn-vpn
+#  - mpls-bgp-vpn
+alternatives = mpls-bgp-vpn
 
 # At the moment, available values are: 
 # * device-load 
@@ -35,3 +36,12 @@ number_of_vpns = 10
 # Path has to be finish with "/"
 controller_path = ~/sdn/vpn/
 controller_cmd = ./start-controller.sh
+
+[[mpls-bgp-vpn]]
+# Configuring an alternative for a service.
+#
+# Declare environment on which alternative will be executed.
+environment = Docker
+
+# Scenario for alternative rm3-sdn-vpn
+number_of_vpns = 1
