First release with two alternatives implemented.

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -17,7 +17,7 @@ services = VPN
 # At the moment, available values are: 
 #  - rm3-sdn-vpn
 #  - mpls-bgp-vpn
-alternatives = mpls-bgp-vpn
+alternatives = mpls-bgp-vpn, rm3-sdn-vpn
 
 # At the moment, available values are: 
 # * device-load 
@@ -32,7 +32,7 @@ metrics = device-load
 environment = Mininet
 
 # Scenario for alternative rm3-sdn-vpn
-number_of_vpns = 10
+number_of_vpns = 1
 # Path has to be finish with "/"
 controller_path = ~/sdn/vpn/
 controller_cmd = ./start-controller.sh
