--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -6,7 +6,7 @@
 [Framework]
 # Declare here all services to test.
 #
-# At the moment, available values are: 
+# Available values are: 
 #  - VPN, namely VirtualPrivateNetwork
 services = VPN
 
