Refactoring on Scenario object

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -25,14 +25,19 @@ alternatives = rm3-sdn-vpn
 # * control-plane-convergence-time
 metrics = device-load
 
+[[scenario]]
+# Number of VPNs (must be the same for all alternatives)
+number_of_vpns = 1
+
 [[rm3-sdn-vpn]]
 # Configuring an alternative for a service.
 #
 # Declare environment on which alternative will be executed.
 environment = Mininet
 
-# Scenario for alternative rm3-sdn-vpn
-number_of_vpns = 1
+# Number of VPNs (must be the same for all alternatives)
+#number_of_vpns = 1
+
 # Path has to be finish with "/"
 controller_path = ~/sdn/vpn/
 controller_cmd = ./start-controller.sh
@@ -43,5 +48,5 @@ controller_cmd = ./start-controller.sh
 # Declare environment on which alternative will be executed.
 environment = Docker
 
-# Scenario for alternative rm3-sdn-vpn
-number_of_vpns = 1
+# Number of VPNs (must be the same for all alternatives)
+#number_of_vpns = 1
