Added utility wrappers

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -17,7 +17,7 @@ services = VPN
 # At the moment, available values are: 
 #  - rm3-sdn-vpn
 #  - mpls-bgp-vpn
-alternatives = rm3-sdn-vpn
+alternatives = mpls-bgp-vpn
 
 # At the moment, available values are: 
 # * device-load 
@@ -35,9 +35,6 @@ number_of_vpns = 1
 # Declare environment on which alternative will be executed.
 environment = Mininet
 
-# Number of VPNs (must be the same for all alternatives)
-#number_of_vpns = 1
-
 # Path has to be finish with "/"
 controller_path = ~/sdn/vpn/
 controller_cmd = ./start-controller.sh
@@ -47,6 +44,3 @@ controller_cmd = ./start-controller.sh
 #
 # Declare environment on which alternative will be executed.
 environment = Docker
-
-# Number of VPNs (must be the same for all alternatives)
-#number_of_vpns = 1
