Added the storing of topology information for each simulation

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -17,7 +17,7 @@ services = VPN
 # At the moment, available values are: 
 #  - rm3-sdn-vpn
 #  - mpls-bgp-vpn
-alternatives = mpls-bgp-vpn
+alternatives = rm3-sdn-vpn
 
 # At the moment, available values are: 
 # * device-load 
