Added observers chain to solve the problems related to the execution order among collectors and environment

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -14,30 +14,30 @@ services = VPN
 # Declare here all alternatives for service to test Moreover, also declare all
 # metrics to measure.
 #
-# At the moment, available values are: 
+# Available values are: 
 #  - rm3-sdn-vpn
 #  - mpls-bgp-vpn
-alternatives = rm3-sdn-vpn
+alternatives = mpls-bgp-vpn
 
-# At the moment, available values are: 
+# Available values are: 
 # * device-load 
 # * control-plane-overhead
 # * control-plane-convergence-time
-metrics = device-load
+metrics = control-plane-overhead
 
 [[scenario]]
-# Number of VPNs (must be the same for all alternatives)
+# Number of VPNs.
 number_of_vpns = 1
 
-[[rm3-sdn-vpn]]
+#[[rm3-sdn-vpn]]
 # Configuring an alternative for a service.
 #
 # Declare environment on which alternative will be executed.
-environment = Mininet
+#environment = Mininet
 
 # Path has to be finish with "/"
-controller_path = ~/sdn/vpn/
-controller_cmd = ./start-controller.sh
+#controller_path = ~/papers/sdn-framework/vpn
+#controller_cmd = ./start-controller.sh
 
 [[mpls-bgp-vpn]]
 # Configuring an alternative for a service.
