Added collector for Docker environment

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -29,15 +29,15 @@ metrics = control-plane-overhead
 # Number of VPNs.
 number_of_vpns = 1
 
-#[[rm3-sdn-vpn]]
+[[rm3-sdn-vpn]]
 # Configuring an alternative for a service.
 #
 # Declare environment on which alternative will be executed.
-#environment = Mininet
+environment = Mininet
 
 # Path has to be finish with "/"
-#controller_path = ~/papers/sdn-framework/vpn
-#controller_cmd = ./start-controller.sh
+controller_path = ~/papers/sdn-framework/vpn
+controller_cmd = ./start-controller.sh
 
 [[mpls-bgp-vpn]]
 # Configuring an alternative for a service.
