Added control plane convergence time for Docker environment

--- a/input/framework.cfg
+++ b/input/framework.cfg
@@ -23,7 +23,7 @@ alternatives = mpls-bgp-vpn
 # * device-load 
 # * control-plane-overhead
 # * control-plane-convergence-time
-metrics = control-plane-overhead
+metrics = control-plane-convergence-time
 
 [[scenario]]
 # Number of VPNs.
